--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,10 +1,25 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
+/*
 @layer base {
   html {
     font-family: 'Nunito';
     background: black;
   }
+}
+*/
+
+html,
+body {
+    background-color: #202225;
+}
+
+a {
+    color: inherit;
+    text-decoration: none;
+}
+
+* {
+    box-sizing: border-box;
 }
