--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,14 +1,14 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-/*
+
 @layer base {
   html {
-    font-family: 'Nunito';
+    /*font-family: 'Nunito';*/
     background: black;
   }
 }
-*/
+
 
 html,
 body {
